--- a/html/f1.html
+++ b/html/f1.html
@@ -10,7 +10,29 @@
     <link rel="stylesheet" href="../styles/f1.css" />
   </head>
   <body>
-    <div></div>
+    <div style="border: #632a6b groove 1rem">
+      <a href="../index.html"
+        ><aside>
+          <img
+            style="position: relative; float: left; left: 1rem; bottom: 3rem"
+            src="../images/logo.png"
+            width="200"
+            height="200"
+          /></aside
+      ></a>
+      <a href="../index.html"
+        ><aside>
+          <img
+            style="position: relative; float: right; right: 1rem; bottom: 3rem"
+            src="../images/logo.png"
+            width="200"
+            height="200"
+          /></aside
+      ></a>
+      <h1 id="title">Mclaren F1 Racing</h1>
+    </div>
+    <br>
+    <br>
     <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
@@ -35,8 +57,69 @@
         reworks and rule changes in the F1 scene they are rarring to get going
         again.
       </p>
+      <p>
+        The project's direction will be guided by Technical Director James Key
+        and team principal Andreas Seidl. This is the first project lead by the
+        two James studied at the University of Nottingham, sponsered by Lotus
+        Engineering to get his degree. Andreas graduated from the Techinichal
+        University in Munich with a diplome in Mechanical Engineering, and has
+        past expierence with with big name teams such as Porshe and BMW.
+      </p>
     </div>
-
+    <div>
+      <p>
+        Not to much is known about the specs of the new F1 car but we do know
+        that this model is returning to using Mercedes engines. And their past
+        2020 races in the Australian and Italian Grand Prix showed their
+        psotition against big names such as Mercedes, Ferrari, and Red Bull.
+      </p>
+      <table>
+        <tr>
+          <th>Season</th>
+          <th>Date</th>
+          <th>Track</th>
+          <th>Laps Ahead</th>
+        </tr>
+        <tr>
+          <td>1975</td>
+          <td>16 March</td>
+          <td>Phoenix International Raceway</td>
+          <td>97</td>
+        </tr>
+        <tr>
+          <td>1975</td>
+          <td>27 April</td>
+          <td>Trenton International Speedway</td>
+          <td>69</td>
+        </tr>
+        <tr>
+          <td>1976</td>
+          <td>2 May</td>
+          <td>Trenton International Speedway</td>
+          <td>60</td>
+        </tr>
+        <tr>
+          <td>1977</td>
+          <td>12 June</td>
+          <td>Milwaukee Mile</td>
+          <td>103</td>
+        </tr>
+        <tr>
+          <td>1978</td>
+          <td>28 October</td>
+          <td>Phoenix International Raceway</td>
+          <td>67</td>
+        </tr>
+        <tr>
+          <td>1979</td>
+          <td>22 April</td>
+          <td>Atlanta Motor Speedway</td>
+          <td>R1=30 R2=61</td>
+        </tr>
+      </table>
+      </table>
+      </table>
+    </div>
     <script src="../script/script.js"></script>
   </body>
 </html>
